--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,16 @@
+S3method(print,antweb)
+export(aw_cbind)
 export(aw_code)
 export(aw_coords)
 export(aw_data)
+export(aw_data_all)
 export(aw_images)
 export(aw_map)
 export(aw_unique)
 import(httr)
 import(leafletR)
 importFrom(assertthat,assert_that)
+importFrom(plyr,ldply)
+importFrom(plyr,llply)
 importFrom(plyr,rbind.fill)
 importFrom(rjson,fromJSON)
